--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -58,10 +58,9 @@
 
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center">
 
-            <com.airbnb.lottie.LottieAnimationView android:layout_width="wrap_content"
-                                                   android:layout_height="wrap_content"/>
-            <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Fav"
-                    android:id="@+id/activity_character_favButton"/>
+            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                       android:src="@drawable/ic_like" android:id="@+id/activity_character_favButton"
+                       android:layout_marginBottom="5dp" android:layout_marginTop="5dp"/>
 
         </LinearLayout>
 
