--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -5,6 +5,9 @@
              android:layout_height="match_parent"
              tools:context=".ui.fragment.FavouriteFragment">
 
+    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"
+               android:id="@+id/fragment_favourite_sadFace" android:src="@drawable/ic_sad" android:visibility="gone"/>
+
     <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
                                                android:layout_height="match_parent"
                                                android:id="@+id/fragment_favourite_rcList"
