--- a/app/src/main/res/layout/character_episode_list_item.xml
+++ b/app/src/main/res/layout/character_episode_list_item.xml
@@ -1,11 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                   android:layout_width="match_parent"
+                                   android:layout_height="wrap_content"
+                                   android:elevation="10dp"
+                                   app:cardCornerRadius="8dp"
+                                   android:layout_margin="5dp"
+                                   android:id="@+id/character_episode_list_item_cardView">
 
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-              android:id="@+id/character_episode_list_item_episodeName"
-              android:layout_margin="5dp"/>
 
-</LinearLayout>
+    <LinearLayout
+            android:id="@+id/character_list_item_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="8"
+            android:orientation="horizontal"
+            android:background="@color/character_item_backGroundColor"
+            android:layout_marginBottom="2dp"
+            android:layout_marginTop="2dp">
+
+        <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3">
+
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/character_episode_list_item_image"
+                    android:src="@drawable/ic_episode"
+                    android:scaleType="fitXY"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout android:layout_width="0dp"
+                      android:layout_height="wrap_content"
+                      android:layout_weight="5"
+                      android:orientation="vertical"
+                      android:layout_marginLeft="5dp"
+                      android:layout_marginRight="7dp">
+
+            <TextView
+                    android:layout_marginTop="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/character_episode_list_item_episodeName"
+                    android:textSize="18dp"
+                    android:textColor="@color/character_item_nameColor"
+                    android:text="Episode Name"
+                    android:fontFamily="@font/misfits_rick_and_morty" android:layout_marginBottom="7dp"/>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="1">
+
+
+                <TextView
+                        android:id="@+id/character_episode_list_item_episodeSeason"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="EPISODE SEASON"
+                        android:textSize="12dp"
+                        android:fontFamily="@font/misfits_rick_and_morty"
+                        android:textColor="@color/character_item_nameColor"
+                        android:layout_weight="1"
+                        android:textAlignment="viewStart"
+                />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                    android:layout_marginTop="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
+
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                    android:layout_marginTop="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
+
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_marginTop="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="1">
+
+                <TextView
+                        android:id="@+id/character_episode_list_item_episodeAirDate"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="AIR DATE"
+                        android:fontFamily="@font/misfits_rick_and_morty"
+                        android:textColor="@color/character_item_textFieldColor"
+                        android:layout_weight="1"
+                        android:textAlignment="textEnd"
+                />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+</androidx.cardview.widget.CardView>
