--- a/app/src/main/res/layout/character_episode_list_item.xml
+++ b/app/src/main/res/layout/character_episode_list_item.xml
@@ -22,14 +22,14 @@
         <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="3">
+                android:layout_weight="3"
+                android:gravity="center">
 
             <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:id="@+id/character_episode_list_item_image"
                     android:src="@drawable/ic_episode"
-                    android:scaleType="fitXY"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"/>
 
@@ -56,7 +56,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:weightSum="1">
+                    android:weightSum="1"
+                    android:layout_marginBottom="10dp">
 
 
                 <TextView
@@ -74,36 +75,7 @@
             </LinearLayout>
 
 
-            <LinearLayout
-                    android:layout_marginTop="8dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="2">
 
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                    android:layout_marginTop="8dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="2">
-
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="2">
-
-
-            </LinearLayout>
 
             <LinearLayout
                     android:layout_marginTop="8dp"
