--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#4550B9</color>
+    <color name="colorPrimaryDark">#4D000000</color>
     <color name="colorAccent">#D81B60</color>
     <color name="baseBackground">#202329</color>
     <color name="baseSearchViewBackgroundColor">#d2e054</color>
@@ -14,10 +14,21 @@
 
     <color name="tab1Color">#420259</color>
     <color name="tab2Color">#70b347</color>
-    <color name="tab3Color">#90542F</color>
+    <color name="tab3Color">#F26D2E</color>
 
     <color name="dead_color">#ff5349</color>
     <color name="alive_color">#187b09</color>
     <color name="unknown_color">#F26D2E</color>
+
+    <color name="rate_app_background">#4550B9</color>
+    <color name="rate_star_color">#44B6AC</color>
+
+
+    <color name="starColor">#45b9ad</color>
+    <color name="noteDescriptionTextColor">#45b9ad</color>
+    <color name="titleTextColor">#FFFFFF</color>
+    <color name="descriptionTextColor">#A6FFFFFF</color>
+    <color name="commentTextColor">#FFFFFF</color>
+    <color name="hintTextColor">#55000000</color>
 
 </resources>
