--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -5,7 +5,7 @@
              android:layout_height="match_parent"
              tools:context=".ui.fragment.FavouriteFragment">
 
-    <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
+    <ImageView android:layout_width="100dp" android:layout_height="100dp"
                  android:layout_gravity="center"
                  android:id="@+id/fragment_favourite_sadFace" android:src="@drawable/ic_sad" android:visibility="gone"/>
 
@@ -13,6 +13,7 @@
                                                android:layout_height="match_parent"
                                                android:id="@+id/fragment_favourite_rcList"
                                                android:orientation="vertical"
+                                               android:visibility="visible"
     />
 
 </FrameLayout>
