--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+
+    <style name="popup_window_animation">
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+    </style>
+
 </resources>
