--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -11,26 +11,18 @@ android:id="@+id/activity_base_linearLayout">
 
 
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                  android:id="@+id/activity_base_topLayout" android:weightSum="4"
+                  android:id="@+id/activity_base_topLayout" android:weightSum="6"
                   android:orientation="horizontal">
 
-        <androidx.appcompat.widget.SearchView android:layout_width="0dp"
-                                              android:layout_height="match_parent"
-                                              android:id="@+id/activity_base_searchView"
-                                              android:layout_marginTop="5dp"
-                                              android:layout_marginLeft="7dp"
-                                              android:layout_marginRight="4dp"
-                                              android:layout_marginBottom="10dp"
-                                              android:layout_weight="3"
-        />
+        <include layout="@layout/custom_searchview" android:layout_width="0dp" android:layout_height="match_parent"
+                 android:layout_weight="4" android:id="@+id/activity_base_searchView"/>
 
         <Spinner android:layout_width="0dp" android:layout_height="match_parent"
                  android:id="@+id/activity_base_spinnerSort"
                  android:layout_marginTop="5dp"
-                 android:layout_marginLeft="3dp"
-                 android:layout_marginRight="7dp"
+                 android:layout_marginRight="5dp"
                  android:layout_marginBottom="10dp"
-                 android:layout_weight="1"/>
+                 android:layout_weight="2"/>
 
     </LinearLayout>
 
